# machine_learning

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
datasets/: kmeans-toy.csv
datasets/alpswater/: alpswater.csv
datasets/books/: normalized-test.csv  normalized-training.csv  test.csv  training.csv
datasets/hald/: hald.csv
datasets/iris/: normalized-testing-y.csv  normalized-testing.csv  (+2 more)
docs/: CSVReader_8hpp.html  CSVReader_8hpp__dep__incl.dot  CSVReader_8hpp__dep__incl.md5  CSVReader_8hpp__incl.dot  CSVReader_8hpp__incl.md5  CSVReader_8hpp_source.html  ClassifierUtils_8hpp.html  ClassifierUtils_8hpp_source.html  GridWorld_8hpp.html  GridWorld_8hpp__incl.dot  GridWorld_8hpp__incl.map  GridWorld_8hpp__incl.md5  GridWorld_8hpp_source.html  KMeans_8hpp.html  KMeans_8hpp__incl.dot  KMeans_8hpp__incl.map  KMeans_8hpp__incl.md5  KMeans_8hpp_source.html  KNN_8hpp.html  KNN_8hpp__incl.dot  KNN_8hpp__incl.map  KNN_8hpp__incl.md5  KNN_8hpp_source.html  LDA_8hpp.html  LDA_8hpp__incl.dot  LDA_8hpp__incl.map  LDA_8hpp__incl.md5  LDA_8hpp_source.html  LeastSquares_8hpp.html  LeastSquares_8hpp__incl.dot  LeastSquares_8hpp__incl.map  LeastSquares_8hpp__incl.md5  LeastSquares_8hpp_source.html  MLP_8hpp.html  MLP_8hpp__incl.dot  MLP_8hpp__incl.map  MLP_8hpp__incl.md5  MLP_8hpp_source.html  Matrix_8hpp.html  Matrix_8hpp__dep__incl.dot  (+441 more)
include/: CSVReader.hpp  ClassifierUtils.hpp  DynamicProgramming.hpp  GridWorld.hpp  KMeans.hpp  KNN.hpp  LDA.hpp  LeastSquares.hpp  MLP.hpp  Matrix.hpp  MersenneTwister.hpp  Metrics.hpp  NaiveBayes.hpp  PCA.hpp  Timer.hpp  nr3dodo.hpp
(+118 files in other folders)
